--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from dreamguystech.com/preadmin/html/school/light/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Dec 2021 01:36:10 GMT -->
 <head>
     <meta charset="utf-8">
-    <title>Preschool - Bootstrap Admin Template</title>
+    <title>Arafat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
 
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}">
@@ -86,7 +86,7 @@
         <div id="sidebar-menu" class="sidebar-menu">
             <div class="header-left">
                 <a href="{% url 'index' %}" class="logo">
-                    <img src="{% static 'assets/img/sidebar/python-django.png' %}" style="border-radius: 15px" width="240" height="70" alt="">
+                    <img src="{% static 'assets/img/favicon.png' %}" style="border-radius: 15px" alt="">
                     <span class="text-uppercase"></span>
                 </a>
             </div>
