--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <style>
+        tr:hover {
+            background-color: #efefef;
+        }
+    </style>
 
     <body>
 
     <div class="main-wrapper">
 
 
-
         <div class="page-wrapper">
             <div class="content container-fluid">
 
 
-
-                  <div class="row">
+                <div class="row">
                     <div class="col-lg-6 col-md-12 col-12 d-flex">
                         <div class="card flex-fill">
                             <div class="card-header">
@@ -27,47 +30,48 @@
                             </div>
 
                             <div class="row">
-                    {% for urun in urunler %}
-                        <div class="col-sm-6 col-md-6 col-lg-6">
-                            <div class="blog grid-blog">
-                                <div class="blog-image">
-                                    {% if urun.img %}
-                                        <a href="{% url 'urun-detail' urun.slug %}"><img class="img-fluid"
-                                                                                         style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
-                                                                                         src="{{ urun.img.url }}"
-                                                                                         alt=""></a>
-                                    {% else %}
-                                        <a href="{% url 'urun-detail' urun.slug %}"><img class="img-fluid"
-                                                                                         style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
-                                                                                         src="{% static 'assets/img/blog/blog-01.jpg' %}"
-                                                                                         alt=""></a>
-                                    {% endif %}
-                                </div>
-                                <div class="blog-content">
-                                    <h3 class="blog-title"><a
-                                            href="{% url 'urun-detail' urun.slug %}">{{ urun.name }}</a></h3>
-                                    <p>{{ urun.description|truncatechars:30 }}</p>
-                                    <a href="{% url 'urun-detail' urun.slug %}" class="read-more"><i
-                                            class="fas fa-long-arrow-alt-right" aria-hidden="true"></i> Read More</a>
-                                    <div class="blog-info clearfix">
-                                        <div class="post-left">
-                                            <ul>
-                                                <li><a href="{% url 'urun-detail' urun.slug %}"><i
-                                                        class="far fa-calendar-alt"
-                                                        aria-hidden="true"></i><span>{{ urun.date|date:"F , d , Y" }}</span></a>
-                                                </li>
-                                            </ul>
+                                {% for urun in urunler %}
+                                    <div class="col-sm-6 col-md-6 col-lg-6">
+                                        <div class="blog grid-blog">
+                                            <div class="blog-image">
+                                                {% if urun.img %}
+                                                    <a href="{% url 'urun-detail' urun.slug %}"><img class="img-fluid"
+                                                                                                     style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
+                                                                                                     src="{{ urun.img.url }}"
+                                                                                                     alt=""></a>
+                                                {% else %}
+                                                    <a href="{% url 'urun-detail' urun.slug %}"><img class="img-fluid"
+                                                                                                     style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
+                                                                                                     src="{% static 'assets/img/blog/blog-01.jpg' %}"
+                                                                                                     alt=""></a>
+                                                {% endif %}
+                                            </div>
+                                            <div class="blog-content">
+                                                <h3 class="blog-title"><a
+                                                        href="{% url 'urun-detail' urun.slug %}">{{ urun.name }}</a>
+                                                </h3>
+                                                <p>{{ urun.description|truncatechars:30 }}</p>
+                                                <a href="{% url 'urun-detail' urun.slug %}" class="read-more"><i
+                                                        class="fas fa-long-arrow-alt-right" aria-hidden="true"></i> Read
+                                                    More</a>
+                                                <div class="blog-info clearfix">
+                                                    <div class="post-left">
+                                                        <ul>
+                                                            <li><a href="{% url 'urun-detail' urun.slug %}"><i
+                                                                    class="far fa-calendar-alt"
+                                                                    aria-hidden="true"></i><span>{{ urun.date|date:"F , d , Y" }}</span></a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
+
+                                {% endfor %}
+
+
                             </div>
-                        </div>
-
-                    {% endfor %}
-
-
-                </div>
-
 
 
                         </div>
@@ -89,46 +93,48 @@
                                     <div class="col-md-12">
                                         <div class="table-responsive">
                                             <table class="table custom-table datatable">
-                                    <thead class="thead-light">
-                                    <tr>
-                                        <th>Urun ismi</th>
-                                        <th>Fiyat/Birim</th>
-                                        <th>Renk</th>
-                                        <th>Size</th>
-                                        <th>Sani</th>
-                                        <th>Turu</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
+                                                <thead class="thead-light">
+                                                <tr>
+                                                    <th>Urun ismi</th>
+                                                    <th>Fiyat/Birim</th>
+                                                    <th>Renk</th>
+                                                    <th>Size</th>
+                                                    <th>Sani</th>
+                                                    <th>Turu</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
 
-                                    {% for urun in urunListeleri %}
-                                        <tr>
-                                            <td>
+                                                {% for urun in urunListeleri %}
+                                                    <tr>
+                                                        <td>
 
-                                                {% if urun.img %}
-                                                    <a href="{% url 'urun-detail' urun.slug %}"><img
-                                                            class="avatar text-white" src="{{ urun.img.url }}"
-                                                            alt=""></a>
-                                                {% else %}
-                                                    <a href="{% url 'urun-detail' urun.slug %}"><img
-                                                            class="avatar text-white"
-                                                            src="{% static 'assets/img/blog/blog-01.jpg' %}" alt=""></a>
-                                                {% endif %}
-                                                <h2><a style="margin: 1rem"
-                                                       href="{% url 'urun-detail' urun.slug %}">{{ urun.name }}</a></h2>
-                                            </td>
-                                            <td>{{ urun.price }} / {{ urun.birim }}</td>
-                                            <td>{{ urun.color }}</td>
-                                            <td>{{ urun.size }}</td>
-                                            <td>{{ urun.count }}</td>
-                                            <td>{{ urun.category }}</td>
-                                        </tr>
-                                    {% endfor %}
+                                                            {% if urun.img %}
+                                                                <a href="{% url 'urun-detail' urun.slug %}"><img
+                                                                        class="avatar text-white"
+                                                                        src="{{ urun.img.url }}"
+                                                                        alt=""></a>
+                                                            {% else %}
+                                                                <a href="{% url 'urun-detail' urun.slug %}"><img
+                                                                        class="avatar text-white"
+                                                                        src="{% static 'assets/img/blog/blog-01.jpg' %}"
+                                                                        alt=""></a>
+                                                            {% endif %}
+                                                            <h2><a style="margin: 1rem"
+                                                                   href="{% url 'urun-detail' urun.slug %}">{{ urun.name }}</a>
+                                                            </h2>
+                                                        </td>
+                                                        <td>{{ urun.price }} / {{ urun.birim }}</td>
+                                                        <td>{{ urun.color }}</td>
+                                                        <td>{{ urun.size }}</td>
+                                                        <td>{{ urun.count }}</td>
+                                                        <td>{{ urun.category }}</td>
+                                                    </tr>
+                                                {% endfor %}
 
 
-
-                                    </tbody>
-                                </table>
+                                                </tbody>
+                                            </table>
                                         </div>
                                     </div>
                                 </div>
@@ -150,36 +156,40 @@
                                 </div>
                             </div>
                             <div class="row">
-                    {% for calisan in calisanlar %}
-                        <div class="col-sm-6 col-md-6 col-lg-4">
-                            <div class="blog grid-blog">
-                                <div class="blog-image">
-                                    {% if calisan.img %}
-                                        <a href="{% url 'calisan-detail' calisan.slug %}"><img class="img-fluid"
-                                                                                               style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
-                                                                                               src="{{ calisan.img.url }}"
-                                                                                               alt=""></a>
-                                    {% else %}
-                                        <a href="{% url 'calisan-detail' calisan.slug %}"><img class="img-fluid"
-                                                                                               style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
-                                                                                               src="{% static 'assets/img/blog/blog-01.jpg' %}"
-                                                                                               alt=""></a>
-                                    {% endif %}
-                                </div>
-                                <div class="blog-content">
-                                    <h3 class="blog-title"><a
-                                            href="{% url 'calisan-detail' calisan.slug %}">{{ calisan.name }}</a></h3>
-                                    <p>{{ calisan.profession }}</p>
-                                    <a href="{% url 'calisan-detail' calisan.slug %}" class="read-more"><i
-                                            class="fas fa-long-arrow-alt-right" aria-hidden="true"></i> Read More</a>
-                                </div>
+                                {% for calisan in calisanlar %}
+                                    <div class="col-sm-6 col-md-6 col-lg-4">
+                                        <div class="blog grid-blog">
+                                            <div class="blog-image">
+                                                {% if calisan.img %}
+                                                    <a href="{% url 'calisan-detail' calisan.slug %}"><img
+                                                            class="img-fluid"
+                                                            style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
+                                                            src="{{ calisan.img.url }}"
+                                                            alt=""></a>
+                                                {% else %}
+                                                    <a href="{% url 'calisan-detail' calisan.slug %}"><img
+                                                            class="img-fluid"
+                                                            style="max-width: 100%; min-width: 100%; max-height: 320px;min-height: 320px"
+                                                            src="{% static 'assets/img/blog/blog-01.jpg' %}"
+                                                            alt=""></a>
+                                                {% endif %}
+                                            </div>
+                                            <div class="blog-content">
+                                                <h3 class="blog-title"><a
+                                                        href="{% url 'calisan-detail' calisan.slug %}">{{ calisan.name }}</a>
+                                                </h3>
+                                                <p>{{ calisan.profession }}</p>
+                                                <a href="{% url 'calisan-detail' calisan.slug %}" class="read-more"><i
+                                                        class="fas fa-long-arrow-alt-right" aria-hidden="true"></i> Read
+                                                    More</a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                {% endfor %}
+
+
                             </div>
-                        </div>
-
-                    {% endfor %}
-
-
-                </div>
                         </div>
                     </div>
                 </div>
